--- a/FRONT-END/src/app/pages/register/register.component.html
+++ b/FRONT-END/src/app/pages/register/register.component.html
@@ -163,7 +163,7 @@
              Registrarse
             </button>
                 <span style="color: white;">Ya tienes una cuenta?</span>
-                <a href="/inicio-sesion" class="text-decoration-none"> Iniciar sesión</a>
+                <a href="/iniciosesion" class="text-decoration-none"> Iniciar sesión</a>
             </form>
         </div>
     </div>
