--- a/FRONT-END/src/app/pages/inicio/inicio.component.css
+++ b/FRONT-END/src/app/pages/inicio/inicio.component.css
@@ -1,21 +1,14 @@
-.box {
-    padding: 60px 0px;
-    background-image: linear-gradient( to right, rgba(0, 0, 0, 0.699), rgba(0, 0, 0, 0.5)), url(./coins.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-position: center;
-    min-height: 100vh;
-    width: 100%;
-    height: auto;
+@media (min-width: 768px) {
+    .alineado {
+        display: flex;
+        justify-content: flex-end;
+        align-content: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
 }
 
-.titulo {
-    color: white;
-}
-
-.sidebar1 {
+.orange {
     background: #F17153;
     /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(#F17153, #F58D63, #f1ab53);
@@ -28,40 +21,4 @@
     /* Standard syntax */
     padding: 0px;
     min-height: 90%;
-}
-
-.list {
-    color: black;
-    list-style: none;
-    padding-left: 0px;
-}
-
-.list::first-line {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.list>li,
-h5 {
-    padding: 5px 0px 5px 40px;
-}
-
-.list>li:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-left: 5px solid black;
-    color: black;
-    font-weight: bolder;
-    padding-left: 35px;
-}
-
-.main-content {
-    text-align: center;
-}
-
-@media (min-width: 968px) {
-    .row {
-        margin-top: 4rem;
-    }
-    p {
-        font-size: 6rem;
-    }
 }
