--- a/FRONT-END/src/app/pages/inicio/inicio.component.html
+++ b/FRONT-END/src/app/pages/inicio/inicio.component.html
@@ -1,31 +1,32 @@
-<div class="box">
-    <h3 class="titulo text-center"><strong> GC PIL MONEY</strong></h3>
-    <nav>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-6 col-xs-4 sidebar1">
-                    <div class="left-navigation">
-                        <ul class="list">
-                            <h5><strong>Bienvenido</strong></h5>
-                            <li routerLink="/inicio">Inicio</li>
-                            <li routerLink="/saldo">Consultar Saldo</li>
-                            <li routerLink="/ingresos">Ingresar dinero</li>
-                            <li routerLink="/extraer">Extraer dinero</li>
-                            <li routerLink="">Transferencias</li>
-                            <li routerLink="">Soporte técnico</li>
-                        </ul>
-                        <ul class="list">
-                            <h5><strong>Otras funciones</strong></h5>
-                            <li>Giro al descubierto</li>
-                            <li>Pago de Servicios</li>
-                            <li>Compra y venta de Dólares</li>
-                            <li>Criptomonedas</li>
-                            <li>Seguros</li>
-                            <li>Préstamos</li>
-                        </ul>
-                    </div>
+<nav class="navbar navbar-expand-md orange navbar-dark">
+    <button class="navbar-toggler navbar-toggler-right" type="button" aria-controls="appNavigation" aria-expanded="!isCollapsed" aria-label="Toggle navigation" (click)="toggleMenu()">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse alineado text-center" id="appNavigation" [ngbCollapse]="isCollapsed">
+        <div class="navbar-nav mr-auto" *ngIf="blnDisplayMenu">
+
+            <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/saldo" routerLinkActive="active">Consultar Saldo</a>
+            <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/ingreso" routerLinkActive="active">Ingresar Dinero</a>
+            <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/extraer" routerLinkActive="active">Extraer Dinero</a>
+            <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/transferencias" routerLinkActive="active">Transferencias</a>
+            <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/soporte" routerLinkActive="active">Soporte Técnico</a>
+
+
+            <div class="nav-item dropdown" ngbDropdown>
+                <a class="nav-link dropdown-toggle btn-lg" id="dropdownSede" ngbDropdownToggle>Otras Funciones</a>
+                <div class="dropdown-menu" ngbDropdownMenu aria-labelledby="dropdownSede">
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Giro al descubierto</a>
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Pago Servicios</a>
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Compra/Venta Dólares</a>
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Criptomonedas</a>
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Seguros</a>
+                    <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Préstamos</a>
+
+
                 </div>
             </div>
+
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
