--- a/FRONT-END/src/app/pages/pag-bienvenida/pag-bienvenida.component.html
+++ b/FRONT-END/src/app/pages/pag-bienvenida/pag-bienvenida.component.html
@@ -19,7 +19,7 @@
                       </div>
                       <div class="col-md-6 d-flex flex-column">
                           <img src="assets/img/hero-image-2.jpeg" class="hero" alt="">
-                          <a routerLink="/login" type="button" class="btn btn-dark">Inicia Sesión</a>
+                          <a routerLink="/iniciosesion" type="button" class="btn btn-dark">Inicia Sesión</a>
                       </div>
                   </div>
               </div>
