--- a/FRONT-END/src/app/pages/register/register.component.css
+++ b/FRONT-END/src/app/pages/register/register.component.css
@@ -1,7 +1,7 @@
 .bg {
     min-height: 100vh;
     height: auto;
-    background-image: url(./fondo.png);
+    background-image: url(./../../../assets/img/fondo.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -18,6 +18,7 @@
 
 ::placeholder {
     color: white;
+    opacity: 65%;
 }
 
 .titulo {
@@ -45,7 +46,19 @@
     background-color: rgba(245, 245, 245, 0.1);
 }
 
-.boton {
+
+button {
+    display: block;
+    background-color: #EB7329;
+    width: 80%;
+    border: none;
+    margin: auto;
+    border-radius: 10px;
+    /* padding: 0.6rem;
+    margin-top: 0.6rem; */
+}
+
+button:disabled{
     background-color: #EB7329;
 }
 
@@ -66,3 +79,4 @@ option:hover {
     color: rgba(245, 245, 245, 0.1);
     background-color: red;
 }
+
