--- a/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
+++ b/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
@@ -14,38 +14,44 @@
           </ul>
         </div>
         <div class="card-body" *ngIf="variable">
-          <button class="btn btn-dark btn-sm">MI CBU</button>
+          <button class="btn btn-dark btn-sm">MI CVU</button>
+          <h5 class="text-white">{{cuenta.CVU}}</h5>
+          <hr>
   
           <h4 class="card-text  text-white mt-3 mb-0">Saldo disponible</h4>
-          <p class="card-title text-white display-4">$123.099</p>
+          <p *ngIf="cuenta" class="card-title text-white display-4">{{ cuenta.Saldo | currency}}</p>
   
   
           <div class="mt-3"></div>
           <button class="btn btn-dark w-100 col-sm-3" routerLink="/retirarDinero">Extraer dinero</button>
           <button class="btn btn-dark w-100 col-sm-3" routerLink="/ingresarDinero">Ingresar dinero</button>
-          <button class="btn btn-dark w-100 col-sm-3" routerLink="/tranferir">Transferir dinero</button>
+          <button class="btn btn-dark w-100 col-sm-3" routerLink="/transferir">Transferir dinero</button>
   
         </div>
 
         <div class="card-body" *ngIf="!variable">
-            <table class="table table-striped">
+            <table class="table table-striped text-white">
                 <thead>
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">Country</th>
-                  <th scope="col">Area</th>
-                  <th scope="col">Population</th>
+                  <th scope="col">Tipo de Movimiento</th>
+                  <th scope="col">Monto</th>
+                  <th scope="col">Fecha y Hora</th>
+                  <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let country of countries; index as i">
+                <tr *ngFor="let movimiento of movimientos; index as i">
+
                   <th scope="row">{{ i + 1 }}</th>
                   <td>
-                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
-                    {{ country.name }}
+                    {{ movimiento.tipoMov }}
                   </td>
-                  <td>{{ country.area | number }}</td>
-                  <td>{{ country.population | number }}</td>
+                  <td>{{ movimiento.monto | currency }}</td>
+                  <td>{{ movimiento.fechaHora |  date:'short' }}</td>
+                  <td>
+                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/argentina' + country.flag" class="mr-2" style="width: 20px">
+                  </td>
                 </tr>
                 </tbody>
               </table>
