--- a/FRONT-END/src/app/pages/registro/registro.component.html
+++ b/FRONT-END/src/app/pages/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div class="bg">
+<!-- <div class="bg">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 mx-auto">
@@ -9,43 +9,43 @@
                                 <h1>REGISTRATE</h1>
                                 <p>Es simple, facil y gratis</p>
                                 <!--Nombre-->
-                                <input formControlName="nombre" type="text" class="form-control input"
+                                <!-- <input formControlName="nombre" type="text" class="form-control input"
                                     placeholder="Nombre">
                                 <div class="text-danger"
                                     *ngIf="signupForm.get('nombre').hasError('required') && signupForm.get('nombre').touched">
                                     Ingrese el nombre
                                 </div>
-                                <br>
+                                <br> -->
 
                                 <!--Apellido-->
-                                <input formControlName="apellido" type="text" class="form-control"
+                                <!-- <input formControlName="apellido" type="text" class="form-control"
                                     placeholder="Apellido">
                                 <div class="text-danger"
                                     *ngIf="signupForm.get('apellido').hasError('required') && signupForm.get('apellido').touched">
                                     Ingrese el
                                     apellido</div>
-                                <br>
+                                <br> -->
 
                                 <!--DNI-->
-                                <input formControlName="dni" type="number" class="form-control" placeholder="DNI">
+                                <!-- <input formControlName="dni" type="number" class="form-control" placeholder="DNI">
                                 <div class="text-danger"
                                     *ngIf="signupForm.get('dni').hasError('required') && signupForm.get('dni').touched">
                                     El
                                     dni
                                     es requerido</div>
-                                <br>
+                                <br> -->
 
                                 <!--Mail-->
-                                <input formControlName="mail" type="mail" class="form-control" placeholder="E-mail">
+                                <!-- <input formControlName="mail" type="mail" class="form-control" placeholder="E-mail">
                                 <div class="text-danger"
                                     *ngIf="signupForm.get('mail').hasError('required') && signupForm.get('mail').touched">
                                     Introduzca un mail</div>
-                                <br>
+                                <br> -->
 
                                 <!--Usuario-->
-                                <input formControlName="usuario" type="text" class="form-control" placeholder="Usuario">
+                                <!-- <input formControlName="usuario" type="text" class="form-control" placeholder="Usuario"> -->
                                 <!--Usuario Validaciones-->
-                                <div class="text-danger"
+                                <!-- <div class="text-danger"
                                     *ngIf="signupForm.get('usuario').hasError('required') && signupForm.get('usuario').touched">
                                     Ingrese el
                                     usuario
@@ -53,22 +53,22 @@
                                 <div *ngIf="signupForm.get('usuario').hasError('minlength')">Cantidad minima de
                                     caracteres es 4
                                 </div>
-                                <br>
+                                <br> -->
 
                                 <!--Contraseña-->
-                                <input formControlName="clave" type="password" class="form-control"
-                                    placeholder="Contraseña">
+                                <!-- <input formControlName="clave" type="password" class="form-control"
+                                    placeholder="Contraseña"> -->
                                 <!--Contraseña Validaciones-->
-                                <div class="text-danger"
+                                <!-- <div class="text-danger"
                                     *ngIf="signupForm.get('clave').hasError('required') && signupForm.get('clave').touched">
                                     Ingrese la clave</div>
                                 <div class="text-danger"
                                     *ngIf="signupForm.get('clave').hasError('minlength') && signupForm.get('clave').dirty && signupForm.get('clave').touched">
                                     Cantidad minima de caracteres es 6</div>
-                                <br>
+                                <br> -->
 
                                 <!--Boton Registrarse-->
-                                <button class="btn btn-primary" [disabled]="signupForm.invalid">Registrarme</button>
+                                <!-- <button class="btn btn-primary" [disabled]="signupForm.invalid">Registrarme</button>
                             </form>
                         </div>
                     </div>
@@ -76,4 +76,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
