--- a/FRONT-END/src/app/pages/inicio-sesion/inicio-sesion.component.html
+++ b/FRONT-END/src/app/pages/inicio-sesion/inicio-sesion.component.html
@@ -6,14 +6,14 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <div class="logo"></div>
-                            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" autocomplete="off" novalidate>
+                            <form [formGroup]="loginForm" (ngSubmit)="onEnviar($event, cliente)" autocomplete="off" novalidate>
 
                                 <h1 class="mt-3 mb-2">Iniciar Sesión</h1>
                                 <p class="mb-4">Por favor, ingrese su email y contraseña.</p>
 
                                 <!--Email-->
                                 <div class="email">
-                                    <input type="email" class="form-control" formControlName="email" id="floatingInput" placeholder="Ingrese su email" />
+                                    <input type="email" class="form-control" formControlName="email" placeholder="Ingrese su email" id="email" [(ngModel)]="cliente.Email" />
                                     <label for="floatingInput"><i class="fa fa-envelope"></i>  Correo Electronico</label>
                                     <div *ngIf="loginForm.controls.email?.errors && emailInvalid" style="color: red; margin: 6px;">
                                         <p *ngIf="emailField?.hasError('required')">
@@ -28,7 +28,7 @@
                                 <!--Contraseña-->
                                 <div class="pass">
 
-                                    <input type="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña" />
+                                    <input type="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña" id="pwd" [(ngModel)]="cliente.Password" />
                                     <label for="floatingInput"><i class="fa fa-unlock"></i>  Contraseña</label>
 
                                 </div>
