--- a/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
+++ b/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
@@ -19,7 +19,7 @@
           <hr>
   
           <h4 class="card-text  text-white mt-3 mb-0">Saldo disponible</h4>
-          <p *ngIf="cuenta" class="card-title text-white display-4">{{ cuenta.Saldo | currency}}</p>
+          <p class="card-title text-white display-4">{{cuenta.Saldo |currency}}</p>
   
   
           <div class="mt-3"></div>
@@ -33,21 +33,16 @@
             <table class="table table-striped text-white">
                 <thead>
                 <tr>
-                  <th scope="col">#</th>
                   <th scope="col">Tipo de Movimiento</th>
                   <th scope="col">Monto</th>
                   <th scope="col">Fecha y Hora</th>
-                  <th scope="col"></th>
+                  <th scope="col">#</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let movimiento of movimientos; index as i">
-
-                  <th scope="row">{{ i + 1 }}</th>
-                  <td>
-                    {{ movimiento.tipoMov }}
-                  </td>
-                  <td>{{ movimiento.monto | currency }}</td>
+                <tr *ngFor="let movimiento of movimientos">
+                  <td scope="row">{{ movimiento.idTipoMovimiento }}</td>
+                  <td>{{ movimiento.Monto | currency }}</td>
                   <td>{{ movimiento.fechaHora |  date:'short' }}</td>
                   <td>
                     <img [src]="'https://upload.wikimedia.org/wikipedia/commons/argentina' + country.flag" class="mr-2" style="width: 20px">
