--- a/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
+++ b/FRONT-END/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
@@ -23,10 +23,9 @@
   
   
           <div class="mt-3"></div>
-          <button class="btn btn-dark w-100 col-sm-3" routerLink="/retirarDinero">Extraer dinero</button>
-          <button class="btn btn-dark w-100 col-sm-3" routerLink="/ingresarDinero">Ingresar dinero</button>
-          <button class="btn btn-dark w-100 col-sm-3" routerLink="/transferir">Transferir dinero</button>
-  
+          <button class="btn btn-dark w-100 col-sm-3" routerLink="../retirar">Extraer dinero</button>
+          <button class="btn btn-dark w-100 col-sm-3" routerLink="../ingresar">Ingresar dinero</button>
+          <button class="btn btn-dark w-100 col-sm-3" routerLink="../transferencia">Transferir dinero</button>
         </div>
 
         <div class="card-body" *ngIf="!variable">
